--- a/webroot/css/app.css
+++ b/webroot/css/app.css
@@ -104,6 +104,7 @@ footer {
 	/*border: 1px solid #808080;*/
 	/*margin: 0px;*/
 	margin-bottom: 50px;
+	text-align: center;
 }
 .view-title h3 {
 	color: #363637;
