grant y revoke de privilegios para admins

--- a/webroot/css/app.css
+++ b/webroot/css/app.css
@@ -316,7 +316,17 @@ and (min-width : 700px) {
 
 
 
+/* ****************************************************************************
+* Tooltips
+**************************************************************************** */
 
+.tooltip:before {
+    border-color: transparent transparent rgb(0, 0, 0) transparent;
+}
+
+span.has-tip {
+    border-bottom: 0;
+}
 
 /* ****************************************************************************
 * TABLES
